Свобода.Доступность.Уникальность.

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,13 @@
                 <a href="#">Контакты</a>
             </nav>
         </div>
+        <div>
+            <div class="top">
+                Свобода.
+                Доступность.
+                Уникальность.
+            </div>
+        </div>
     </header>
 </body>
 </html>
