Текст под шапкой

--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,16 @@
                 Доступность.
                 Уникальность.
             </div>
+            <div>
+                <div class="top2">
+                    Построй дом <br>
+                    своей мечты
+                </div>
+                <div class="top3">
+                    Мы построим тот дом, о котором вы мечтаете
+                </div>
+
+            </div>
         </div>
     </header>
 </body>
