Кнопка под шапкой

--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/my-project/css/main.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="container header_hed">
         <div class="header">
@@ -31,9 +33,15 @@
                 <div class="top3">
                     Мы построим тот дом, о котором вы мечтаете
                 </div>
-
+                <div style="padding-bottom: 209px;">
+                <button class="btn">
+                    <img src="/my-project/img/arrow-right.svg" alt="" class="arrow_btn">
+                    <p class="txt_btn">Построй свой дом</p>
+                </button>
+            </div>
             </div>
         </div>
     </header>
 </body>
+
 </html>
