Левый текст у второго блока

--- a/html/index.html
+++ b/html/index.html
@@ -42,6 +42,13 @@
             </div>
         </div>
     </header>
+    <section class="section1">
+        <div class="left">
+            <h2 style="font-size: 32px;">О компании</h2>
+            <p style="font-size: 24px; color: gray;">Руководство</p>
+            <p style="font-size: 18px; color: gray;">Почему мы?</p>
+        </div>
+    </section>
 </body>
 
 </html>
