Правый текст у второго блока

--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,9 @@
             <p style="font-size: 24px; color: gray;">Руководство</p>
             <p style="font-size: 18px; color: gray;">Почему мы?</p>
         </div>
+        <div class="right">
+            <h2 style="font-size: 56px;">Липецкая <br>компания <br> "ЭкоДом"</h2>
+        </div>
     </section>
 </body>
 
