Фото у воторого блока

--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,9 @@
         <div class="right">
             <h2 style="font-size: 56px;">Липецкая <br>компания <br> "ЭкоДом"</h2>
         </div>
+        <div class="img_right">
+            <img src="/my-project/img/photo_2024-09-10_12-43-59.jpg" alt="img" style="width:376px; height: 212px;margin-top: 174px; margin-left: -548px;">
+        </div>
     </section>
 </body>
 
