Текст у второго блока под фото

--- a/html/index.html
+++ b/html/index.html
@@ -54,6 +54,13 @@
         <div class="img_right">
             <img src="/my-project/img/photo_2024-09-10_12-43-59.jpg" alt="img" style="width:376px; height: 212px;margin-top: 174px; margin-left: -548px;">
         </div>
+        <div class="txt2_right">
+            <p style="color: gray; font-size: 16px; margin-top: 455px; margin-left: -546px;">В зависимости от пожеланий клиентов, мы можем<br>построить дом любой сложности как по уже готовым, так и<br>по индивидуальным проектам, разработку которых наши<br>специалисты также предоставляют.</p>
+        </div>
+
+        <div class="txt3_right"> 
+            <p style="color: gray; font-size: 16px; margin-top: 561px; margin-left: -546px;">работает в сфере строительства уже более 13 лет. На<br>данный момент более 500 семей стали обладателями<br>собственных домов благодаря нашей компании. За это<br>время у нас накопился значительный опыт в работе<br>эффективного и надежного строительства домов, что<br>вызывает доверие у наших текущих и будущих клиентов.</p>
+        </div>
     </section>
 </body>
 
