Текст у третьего блока

--- a/html/index.html
+++ b/html/index.html
@@ -62,6 +62,18 @@
             <p style="color: gray; font-size: 16px; margin-top: 561px; margin-left: -546px;">работает в сфере строительства уже более 13 лет. На<br>данный момент более 500 семей стали обладателями<br>собственных домов благодаря нашей компании. За это<br>время у нас накопился значительный опыт в работе<br>эффективного и надежного строительства домов, что<br>вызывает доверие у наших текущих и будущих клиентов.</p>
         </div>
     </section>
+    <section class="section2">
+        <div class="left2">
+            <h2 style="font-size: 32px;">Чёткая <br>смета</h2>
+            <p style="font-size: 24px; color: black;">Lorem ipsum dolor sit amet, consectetur <br>
+                adipiscing elit, sed do eiusmod tempor <br>
+                 incididunt ut labore et dolore magna <br>
+                  aliqua. Ut enim ad minim veniam, quis <br>
+                   nostrud exercitation ullamco laboris nisi <br>
+                    ut aliquip ex ea commodo consequat. <br>
+                    Duis aute irure dolor in</p>
+        </div>
+    </section>
 </body>
 
 </html>
