Фото у третьего блока

--- a/html/index.html
+++ b/html/index.html
@@ -73,6 +73,10 @@
                     ut aliquip ex ea commodo consequat. <br>
                     Duis aute irure dolor in</p>
         </div>
+        <div class="right2">
+            
+            <img src="/my-project/img/image 8.png" alt="">
+        </div>
     </section>
 </body>
 
