Заголовок четвертого блока

--- a/html/index.html
+++ b/html/index.html
@@ -78,6 +78,9 @@
             <img src="/my-project/img/image 8.png" alt="">
         </div>
     </section>
+    <section class="section3">
+        <b><h3 style="font-size: 32px; text-align: center;">Почему покупка дома - выгодней, чем покупка квартиры?</h3></b>
+    </section>
 </body>
 
 </html>
