Текст с картинками у четвертого блока

--- a/html/index.html
+++ b/html/index.html
@@ -80,6 +80,35 @@
     </section>
     <section class="section3">
         <b><h3 style="font-size: 32px; text-align: center;">Почему покупка дома - выгодней, чем покупка квартиры?</h3></b>
+        <div class="cards" style="margin-left: 138px;">
+            <div class="card">
+                <img src="/my-project/img/Frame 8821.svg" style="max-width: 80px; margin-top: 12px;">
+                <p style="font-size: 25px;">Идивидуальный проект</p>
+            </div>
+
+            <div class="card">
+                <img src="/my-project/img/Frame 8821 (1).svg" style="max-width: 80px; margin-top: 12px;">
+                <p style="font-size: 25px;">Фиксированная стоимость строительства</p>
+            </div>
+
+            <div class="card">
+                <img src="/my-project/img/Frame 8821 (2).svg" style="max-width: 80px; margin-top: 12px;">
+                <p style="font-size: 25px;">Комплектация домов с коммуникациями</p>
+            </div>
+
+            <div class="card">
+                <img src="/my-project/img/Frame 8821 (3).svg" style="max-width: 80px; margin-top: 12px;">
+                <p style="font-size: 25px;">Государственные программы</p>
+            </div>
+
+            <div class="card">
+                <img src="/my-project/img/Frame 8821 (4).svg" style="max-width: 80px; margin-top: 12px;">
+                <p style="font-size: 25px;">Гарантия на дом 5 лет, на кровлю 7 лет</p>
+            </div>
+        </div>
+            
+
+        </div>
     </section>
 </body>
 
