Фото у четвертого блока

--- a/html/index.html
+++ b/html/index.html
@@ -34,11 +34,11 @@
                     Мы построим тот дом, о котором вы мечтаете
                 </div>
                 <div style="padding-bottom: 209px;">
-                <button class="btn">
-                    <img src="/my-project/img/arrow-right.svg" alt="" class="arrow_btn">
-                    <p class="txt_btn">Построй свой дом</p>
-                </button>
-            </div>
+                    <button class="btn">
+                        <img src="/my-project/img/arrow-right.svg" alt="" class="arrow_btn">
+                        <p class="txt_btn">Построй свой дом</p>
+                    </button>
+                </div>
             </div>
         </div>
     </header>
@@ -52,14 +52,21 @@
             <h2 style="font-size: 56px;">Липецкая <br>компания <br> "ЭкоДом"</h2>
         </div>
         <div class="img_right">
-            <img src="/my-project/img/photo_2024-09-10_12-43-59.jpg" alt="img" style="width:376px; height: 212px;margin-top: 174px; margin-left: -548px;">
+            <img src="/my-project/img/photo_2024-09-10_12-43-59.jpg" alt="img"
+                style="width:376px; height: 212px;margin-top: 174px; margin-left: -548px;">
         </div>
         <div class="txt2_right">
-            <p style="color: gray; font-size: 16px; margin-top: 455px; margin-left: -546px;">В зависимости от пожеланий клиентов, мы можем<br>построить дом любой сложности как по уже готовым, так и<br>по индивидуальным проектам, разработку которых наши<br>специалисты также предоставляют.</p>
+            <p style="color: gray; font-size: 16px; margin-top: 455px; margin-left: -546px;">В зависимости от пожеланий
+                клиентов, мы можем<br>построить дом любой сложности как по уже готовым, так и<br>по индивидуальным
+                проектам, разработку которых наши<br>специалисты также предоставляют.</p>
         </div>
 
-        <div class="txt3_right"> 
-            <p style="color: gray; font-size: 16px; margin-top: 561px; margin-left: -546px;">работает в сфере строительства уже более 13 лет. На<br>данный момент более 500 семей стали обладателями<br>собственных домов благодаря нашей компании. За это<br>время у нас накопился значительный опыт в работе<br>эффективного и надежного строительства домов, что<br>вызывает доверие у наших текущих и будущих клиентов.</p>
+        <div class="txt3_right">
+            <p style="color: gray; font-size: 16px; margin-top: 561px; margin-left: -546px;">работает в сфере
+                строительства уже более 13 лет. На<br>данный момент более 500 семей стали обладателями<br>собственных
+                домов благодаря нашей компании. За это<br>время у нас накопился значительный опыт в
+                работе<br>эффективного и надежного строительства домов, что<br>вызывает доверие у наших текущих и
+                будущих клиентов.</p>
         </div>
     </section>
     <section class="section2">
@@ -67,48 +74,53 @@
             <h2 style="font-size: 32px;">Чёткая <br>смета</h2>
             <p style="font-size: 24px; color: black;">Lorem ipsum dolor sit amet, consectetur <br>
                 adipiscing elit, sed do eiusmod tempor <br>
-                 incididunt ut labore et dolore magna <br>
-                  aliqua. Ut enim ad minim veniam, quis <br>
-                   nostrud exercitation ullamco laboris nisi <br>
-                    ut aliquip ex ea commodo consequat. <br>
-                    Duis aute irure dolor in</p>
+                incididunt ut labore et dolore magna <br>
+                aliqua. Ut enim ad minim veniam, quis <br>
+                nostrud exercitation ullamco laboris nisi <br>
+                ut aliquip ex ea commodo consequat. <br>
+                Duis aute irure dolor in</p>
         </div>
         <div class="right2">
-            
+
             <img src="/my-project/img/image 8.png" alt="">
         </div>
     </section>
-    <section class="section3">
-        <b><h3 style="font-size: 32px; text-align: center;">Почему покупка дома - выгодней, чем покупка квартиры?</h3></b>
-        <div class="cards" style="margin-left: 138px;">
-            <div class="card">
-                <img src="/my-project/img/Frame 8821.svg" style="max-width: 80px; margin-top: 12px;">
-                <p style="font-size: 25px;">Идивидуальный проект</p>
-            </div>
+    <section>
+        <b>
+            <h3 style="font-size: 32px; text-align: center;">Почему покупка дома - выгодней, чем покупка квартиры?</h3>
+        </b>
 
-            <div class="card">
-                <img src="/my-project/img/Frame 8821 (1).svg" style="max-width: 80px; margin-top: 12px;">
-                <p style="font-size: 25px;">Фиксированная стоимость строительства</p>
-            </div>
+        <div class="section3">
+            <div class="cards" style="margin-left: 138px;">
+                <div class="card">
+                    <img src="/my-project/img/Frame 8821.svg" style="max-width: 80px; margin-top: 12px;">
+                    <p style="font-size: 25px;">Идивидуальный проект</p>
+                </div>
 
-            <div class="card">
-                <img src="/my-project/img/Frame 8821 (2).svg" style="max-width: 80px; margin-top: 12px;">
-                <p style="font-size: 25px;">Комплектация домов с коммуникациями</p>
-            </div>
+                <div class="card">
+                    <img src="/my-project/img/Frame 8821 (1).svg" style="max-width: 80px; margin-top: 12px;">
+                    <p style="font-size: 25px;">Фиксированная стоимость строительства</p>
+                </div>
 
-            <div class="card">
-                <img src="/my-project/img/Frame 8821 (3).svg" style="max-width: 80px; margin-top: 12px;">
-                <p style="font-size: 25px;">Государственные программы</p>
-            </div>
+                <div class="card">
+                    <img src="/my-project/img/Frame 8821 (2).svg" style="max-width: 80px; margin-top: 12px;">
+                    <p style="font-size: 25px;">Комплектация домов с коммуникациями</p>
+                </div>
 
-            <div class="card">
-                <img src="/my-project/img/Frame 8821 (4).svg" style="max-width: 80px; margin-top: 12px;">
-                <p style="font-size: 25px;">Гарантия на дом 5 лет, на кровлю 7 лет</p>
-            </div>
-        </div>
-            
+                <div class="card">
+                    <img src="/my-project/img/Frame 8821 (3).svg" style="max-width: 80px; margin-top: 12px;">
+                    <p style="font-size: 25px;">Государственные программы</p>
+                </div>
 
-        </div>
+                <div class="card">
+                    <img src="/my-project/img/Frame 8821 (4).svg" style="max-width: 80px; margin-top: 12px;">
+                    <p style="font-size: 25px;">Гарантия на дом 5 лет, на кровлю 7 лет</p>
+                </div>
+            </div>
+            <div class="right3">
+                <img src="/my-project/img/pngegg (78) 1.png" alt="">
+            </div>
+        </div> 
     </section>
 </body>
 
