ЗАголовок у пятого блока

--- a/html/index.html
+++ b/html/index.html
@@ -122,6 +122,9 @@
             </div>
         </div> 
     </section>
+    <section>
+        <b><h4 style="font-size: 32px; text-align: center;">Наши проекты</h4></b>
+    </section>
 </body>
 
 </html>
