Карточки у пятого блока

--- a/html/index.html
+++ b/html/index.html
@@ -120,10 +120,66 @@
             <div class="right3">
                 <img src="/my-project/img/pngegg (78) 1.png" alt="">
             </div>
-        </div> 
+        </div>
     </section>
     <section>
-        <b><h4 style="font-size: 32px; text-align: center;">Наши проекты</h4></b>
+        <b>
+            <h4 style="font-size: 32px; text-align: center;">Наши проекты</h4>
+        </b>
+        <div class="cards2">
+            <div class="card2">
+                <img src="/my-project/img/Rectangle 16.png" alt="">
+                <h1>Дом «Эверест»</h1>
+                <div style="display: flex; justify-content: space-between;">
+                    <div style="flex: 1; padding: 10px; margin-right: 5px;">
+                        <p><img src="/my-project/img/Vector.svg" alt="">Площадь: 180 м2</p>
+                        <p><img src="/my-project/img/Vector.svg" alt="">Комнат: 6</p>
+                    </div>
+                    <div style="flex: 1; padding: 10px; margin-left: 5px;">
+                        <p><img src="/my-project/img/Vector.svg" alt="">Этажей: 2</p>
+                        <p><img src="/my-project/img/Vector.svg" alt="">Размер: 12x12</p>
+                    </div>
+                </div>
+                <p >Стоимость работ</p>
+                <p style="font-size: 20px;">5 000 000 руб</p>
+            </div>
+
+            <div class="card2">
+                <img src="/my-project/img/Rectangle 16 (1).png" alt="">
+                <h1>«Дом Уют»</h1>
+                <div style="display: flex; justify-content: space-between;">
+                    <div style="flex: 1; padding: 10px; margin-right: 5px;">
+                        <p><img src="/my-project/img/Vector.svg" alt="">Площадь: 114 м2</p>
+                        <p><img src="/my-project/img/Vector.svg" alt="">Комнат: 6</p>
+                    </div>
+                    <div style="flex: 1; padding: 10px; margin-left: 5px;">
+                        <p><img src="/my-project/img/Vector.svg" alt="">Этажей: 1</p>
+                        <p><img src="/my-project/img/Vector.svg" alt="">Размер: 12x12</p>
+                    </div>
+                </div>
+                <p >Стоимость работ</p>
+                <p style="font-size: 20px;">3 146 400 руб</p>
+            </div>
+
+
+            <div class="card2">
+                <img src="/my-project/img/Rectangle 16 (2).png" alt="">
+                <h1>«Дом Мечта»</h1>
+                <div style="display: flex; justify-content: space-between;">
+                    <div style="flex: 1; padding: 10px; margin-right: 5px;">
+                        <p><img src="/my-project/img/Vector.svg" alt="">Площадь: 180 м2</p>
+                        <p><img src="/my-project/img/Vector.svg" alt="">Комнат: 6</p>
+                    </div>
+                    <div style="flex: 1; padding: 10px; margin-left: 5px;">
+                        <p><img src="/my-project/img/Vector.svg" alt="">Этажей: 2</p>
+                        <p><img src="/my-project/img/Vector.svg" alt="">Размер: 12x12</p>
+                    </div>
+                </div>
+                <p >Стоимость работ</p>
+                <p style="font-size: 20px;">5 000 000 руб</p>
+            </div>
+
+        </div>
     </section>
 </body>
 
