Кнопка у пятого блока

--- a/html/index.html
+++ b/html/index.html
@@ -180,6 +180,10 @@
             </div>
 
         </div>
+        <button class="btn2">
+            <img src="/my-project/img/arrow-right.svg" alt="" class="arrow_btn">
+            <p class="txt_btn">Смотреть все проекты</p>
+        </button>   
     </section>
 </body>
 
