--- a/html/index.html
+++ b/html/index.html
@@ -140,7 +140,7 @@
                         <p><img src="/my-project/img/Vector.svg" alt="">Размер: 12x12</p>
                     </div>
                 </div>
-                <p >Стоимость работ</p>
+                <p>Стоимость работ</p>
                 <p style="font-size: 20px;">5 000 000 руб</p>
             </div>
 
@@ -157,7 +157,7 @@
                         <p><img src="/my-project/img/Vector.svg" alt="">Размер: 12x12</p>
                     </div>
                 </div>
-                <p >Стоимость работ</p>
+                <p>Стоимость работ</p>
                 <p style="font-size: 20px;">3 146 400 руб</p>
             </div>
 
@@ -175,7 +175,7 @@
                         <p><img src="/my-project/img/Vector.svg" alt="">Размер: 12x12</p>
                     </div>
                 </div>
-                <p >Стоимость работ</p>
+                <p>Стоимость работ</p>
                 <p style="font-size: 20px;">5 000 000 руб</p>
             </div>
 
@@ -183,8 +183,27 @@
         <button class="btn2">
             <img src="/my-project/img/arrow-right.svg" alt="" class="arrow_btn">
             <p class="txt_btn">Смотреть все проекты</p>
-        </button>   
+        </button>
     </section>
+    <section class="section4">
+
+
+        <div class="left3" style="margin-left: 198px;">
+            <h5 style="font-size: 56px; margin-bottom: 21px;">Мы строим <br>загродные дома</h5>
+            <p style="font-size: 42px; margin-top: -10px;">любой архитектуры</p>
+            <p style="font-size: 15px; color: #020202;">Мы беремся за самые сложные работы, для того, чтобы<br>построить
+                дом вашей мечты</p>
+            <p style="font-size: 15px; color: #020202; margin-top: 5px;">Мы под ваш бюджет построим: Дом, баню и так
+                далее</p>
+        </div>
+
+        <div style="margin-left: 166px; margin-top: 85px;">
+
+            <img src="/my-project/img/Group 8753.png" alt="">
+        </div>
+
+    </section>
+
 </body>
 
 </html>
